@@ -1,3 +1,7 @@
+2002-01-31  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
+	* inflate.c: support raw deflate without zlib header
+
 2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02955] compression_decoders error message
